# gmail-sender

./: README.md  pyproject.toml
gmail_sender/: main.py
